<resources>
    <string name="app_name">ACLEDA TEST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_language">Country and Language</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_location">Location</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="menu_security">Security Tips</string>
    <string name="menu_product_service">Terms and Conditions</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_invite_friend">Invite Friends</string>
    <string name="menu_acleda_bank_stock">ACLEDA Bank Stock</string>
    <string name="menu_customer_loyalty">Customer Loyalty</string>
    <string name="menu_contact_us">Customer Us (24/7)</string>
    <string name="menu_help">Help</string>

    <string name="favorite">Favorite</string>
    <string name="click_here">Click Here</string>
    <string name="scan_qr">Scan QR</string>
    <string name="barcode_value">Barcode value</string>
    <string name="please_press_back_again_to_exit">Please press back again to exit.</string>
    <string name="my_khqr">My KHQR</string>
    <string name="rescan">Rescan</string>
    <string name="dot_line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>

</resources>