<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_language_24"
            android:title="@string/menu_language" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_term"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/menu_terms" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/baseline_security_24"
            android:title="@string/menu_security" />
        <item
            android:id="@+id/nav_service_product"
            android:icon="@drawable/baseline_account_balance_24"
            android:title="@string/menu_product_service" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/baseline_question_answer_24"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_invite_friend"
            android:icon="@drawable/baseline_person_add_alt_1_24"
            android:title="@string/menu_invite_friend" />
        <item
            android:id="@+id/nav_bank_stock"
            android:icon="@drawable/baseline_auto_graph_24"
            android:title="@string/menu_acleda_bank_stock" />
        <item
            android:id="@+id/nav_loyalty"
            android:icon="@drawable/baseline_loyalty_24"
            android:title="@string/menu_customer_loyalty" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_local_phone_24"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/menu_help" />
    </group>
</menu>